r280103 is not necessary on all operating systems https://bugs.webkit.org/show_bug.cgi?id=228136

Reviewed by Alan Bujtas.

Source/WebCore:

r280103 is not necessary on all operating systems.

No new tests because there is no behavior change.

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::applyFontTransforms):

Source/WTF:

* wtf/PlatformUse.h:


Canonical link: https://commits.webkit.org/239836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280124 268f45cc-cd09-0410-ab3c-d52691b4dbfc